# Papercraft

./: Cargo.toml  README.md  USERGUIDE.md  build.rs  papercraft-sample.toml  papercraft.toml.old  simple-test.md  test_build.bat
.claude/: settings.local.json
.papercraft_state/: job_1755345086.json  job_1755345112.json  job_1755345182.json  job_1755399439.json  job_1755425849.json
examples/: academic-paper.toml  advanced-config.toml  advanced-features-test.md  basic-config.toml  comprehensive-test.md  custom-corporate.css  custom-theme.toml  modern-report.yaml  presentation.toml
paper/: USERGUIDE.md
src/: advanced_processing.rs  advanced_styles.rs  chrome_manager.rs  config.rs  config_wizard.rs  docx_converter.rs  dry_run.rs  error_handler.rs  html_converter.rs  image_handler.rs  image_optimization.rs  logger.rs  main.rs  markdown_validator.rs  memory_optimizer.rs  pdf_generator.rs  progress_tracker.rs  resume_handler.rs  text_renderer.rs  themes.rs
src/themes/: academic.css  dark.css  default.css  minimal.css  modern.css
