[package]
name = "papercraft"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
pulldown-cmark = "0.10.0"
comrak = "0.24.1"
tera = "1.19.1"
headless_chrome = "1.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
tempfile = "3.10.1"
base64 = "0.22.1"
regex = "1.10.2"
scraper = "0.19.0"
syntect = { version = "5.2.0", features = ["default-themes", "default-syntaxes"] }
lazy_static = "1.4.0"
walkdir = "2.5.0"
thiserror = "1.0.61"
html-escape = "0.2.13"
notify = "6.1.1"
indicatif = "0.17.8"
rayon = "1.8.0"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
num_cpus = "1.16"

# Keep existing dependencies for fallback
printpdf = "0.6.0"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp", "avif"] }
ab_glyph = "0.2.23"
imageproc = "0.23.0"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.4"
dirs = "5.0"
fs2 = "0.4"
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
docx-rs = "0.4"
